# src/routes/ml_model.js
@@ -1,9 +1,9 @@
 const express = require("express");
-
+import authorize from "../middleware/authorize.js";
 const router = express.Router();
 
 import * as controllers from "../controllers/ml_modelControllers.js";
 
-router.post("/predict", controllers.latePrediction);
+router.get("/predict", authorize(["user"]), controllers.latePrediction);
 
 module.exports = router;
